--- a/public/style.css
+++ b/public/style.css
@@ -3,9 +3,61 @@
     padding: 0;
     box-sizing: border-box;
 }
-body {
+
+.page {
+    background-color: #FBF5E5;
     font: 20px Helvetica, Arial;
 }
+.page.login {
+    background-color: #E6B5B3;
+}
+
+@keyframes fadeOut {
+    0% { opacity: 1; }
+    80% { opacity: 1; }
+    100% { opacity: 0; }
+}
+#splash {
+    z-index: 1;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #E6B5B3;
+    opacity: 0;
+    animation-duration: 3s;
+    animation-name: fadeOut;
+}
+
+.main-wrapper {
+    display: flex;
+    flex-direction: column;
+    max-width: 500px;
+    min-height: 100vh;
+    margin: auto;
+}
+
+.main-wrapper.open-menu {
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+}
+
+.main-wrapper .header {
+    text-align: center;
+    margin-top: 3em;
+}
+
+.main-wrapper .main {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+}
+
 img {
     max-width: 100%;
 }
@@ -13,20 +65,13 @@ img {
     display: flex;
 }
 form {
-    background: #000;
     padding: 3px;
-    position: fixed;
     bottom: 0;
-    width: 100%;
-    display: flex;
-    flex: 1;
 }
 form #m {
     border: 0;
-    flex: 1;
 }
 form button {
-    background: rgb(130, 224, 255);
     border: none;
     padding: 10px;
     font-size: 1rem;
@@ -43,4 +88,75 @@ form button {
 }
 #messages li:nth-child(odd) {
     background: #eee;
+}
+
+.narrow-wrapper {
+    width: 100%;
+    max-width: 20rem;
+}
+
+#loginform {
+    
+}
+#loginform label {
+    display: block;
+    position: absolute;
+}
+#loginform input {
+    width: 100%;
+    height: 30px;
+    margin-bottom: 20px;
+    background-color: transparent;
+    border: none;
+    border-bottom: solid 2px #2D2D2D;
+}
+#loginform button {
+    border: none;
+    padding: 10px;
+    font-size: 1rem;
+}
+
+.forgot-password {
+    display: block;
+}
+.new-user {
+    display: block;
+    text-align: center;
+    margin-top: 4em;
+}
+
+.main-nav .nav-toggler {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    z-index: 2;
+    border: none;
+    width: 3rem;
+    height: 3rem;
+    overflow: hidden;
+    color: transparent;
+}
+
+.main-nav .container {
+    display: none;
+}
+
+.main-nav.open .container {
+    display: block;
+    position: absolute;
+    height: 100%;
+    width: 100vw;
+    overflow-y: scroll !important;
+    top: 0;
+    background-color: #E9DCD3;
+}
+
+.visually-hidden { 
+    position: absolute !important;
+    height: 1px; 
+    width: 1px;
+    overflow: hidden;
+    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+    clip: rect(1px, 1px, 1px, 1px);
+    white-space: nowrap; /* added line */
 }
