--- a/src/views/reset-password.pug
+++ b/src/views/reset-password.pug
@@ -1,17 +1,12 @@
-doctype html
-html(lang="en")
-head
-    meta(charset="UTF-8")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible" content="ie=edge")
-    title Reset password / Flo
-    link(rel="stylesheet" href="style.css")
-
-body
-    h1 Forgot your password?
-    form
-        label Email
-            input(type="email" name="emailaddress")
-        button(type="submit") Reset
-    a(href="/register") New user
+extends shared/layout/main.pug
+block content
+    header(class="header")
+        div
+            h1 Forgot your password?
+    main(class="main")
+        form
+            label Email
+                input(type="email" name="emailaddress")
+            button(type="submit") Reset
+        a(href="/register") New user
 
