--- a/src/views/404.pug
+++ b/src/views/404.pug
@@ -3,5 +3,5 @@ block content
     header(class="header")
         div
             h1 404 - Page not found
-    main(class="main")
+    div(class="main")
         p Hello my name is #{name}
