--- a/src/views/logout.pug
+++ b/src/views/logout.pug
@@ -2,7 +2,7 @@ extends shared/layout/main.pug
 block content
     header(class="header")
         h1 Logout
-    main(class="main")
+    div(class="main")
         p Logging you out...
     script(src="./js/main.js")
     script(src="/socket.io/socket.io.js")
