--- a/src/views/reset-password.pug
+++ b/src/views/reset-password.pug
@@ -3,7 +3,7 @@ block content
     header(class="header")
         div
             h1 Forgot your password?
-    main(class="main")
+    div(class="main")
         form
             label Email
                 input(type="email" name="emailaddress")
