--- a/src/views/shared/layout/root.pug
+++ b/src/views/shared/layout/root.pug
@@ -12,9 +12,9 @@ head
 if layoutType
     body(class=`page ${layoutType}`)
         block body
-        block footScripts
+        block footerScripts
 else
     body(class=`page`)
         block body
-        block footScripts
+        block footerScripts
     
