--- a/src/views/shared/navigation.pug
+++ b/src/views/shared/navigation.pug
@@ -1,23 +1,38 @@
 nav(class="main-nav")
-    button(class="nav-toggler") Navigation
-    ul(class="container")
-        li
-            a(href="#") Java
-        li
-            a(href="#") MsDev
-        li
-            a(href="#") MsSolutions
-        li
-            a(href="#") EPI
-        li
-            a(href="#") BAA
-        li
-            a(href="#") UX
-        li
-            a(href="#") Trondheim
-        li
-            a(href="#") AI Advisory
-        li
-            a(href="#") Admin
-        li
-            a(href="#") Sales & marketing
+    button(class="nav-toggler")
+        span(class="visually-hidden") Open navigation
+        img(src="/assets/nav-list.png" alt="List")
+    div(class="container")
+        ul(class="nav-list")
+            li
+                a(href="/mypage") My page
+            li
+                a(href="/chat") Chat
+            li
+                a(href="/logout") Logout
+            li
+                a(href="#") Java
+            li
+                a(href="#") MsDev
+            li
+                a(href="#") MsSolutions
+            li
+                a(href="#") EPI
+            li
+                a(href="#") BAA
+            li
+                a(href="#") UX
+            li
+                a(href="#") Trondheim
+            li
+                a(href="#") AI Advisory
+            li
+                a(href="#") Admin
+            li
+                a(href="#") Sales & marketing
+            li
+                a(href="/mypage") My page
+            li
+                a(href="/chat") Chat
+            li
+                a(href="/logout") Logout
