--- a/src/views/shared/layout/main.pug
+++ b/src/views/shared/layout/main.pug
@@ -3,7 +3,11 @@ block headScripts
     script(src="https://unpkg.com/lodash@4.16.6")
 block body
     block splash
-    div(class=`main-wrapper`)
-        block content
-block footScripts
+    include ../navigation.pug
+    include ../countdown.pug
+    
+    div(class="page-container")
+        div(class=`main-wrapper`)
+            block content
+block footerScripts
     script(src="./js/main.js")
