--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,9 @@
     background-color: #FBF5E5;
     font: 20px Helvetica, Arial;
     overflow: hidden;
+    width: 100vw;
+    max-width: 100vw;
+    
 }
 .page.login {
     background-color: #E6B5B3;
