--- a/public/style.css
+++ b/public/style.css
@@ -22,7 +22,7 @@
     100% { opacity: 0; }
 }
 #splash {
-    z-index: 1;
+    z-index: 2;
     position: absolute;
     width: 100%;
     height: 100vh;
@@ -138,7 +138,7 @@ form button {
     position: absolute;
     top: 1rem;
     left: 1rem;
-    z-index: 2;
+    z-index: 1;
     border: none;
     width: 3rem;
     height: 3rem;
@@ -181,7 +181,7 @@ form button {
     position: absolute;
     top: 1rem;
     right: 1rem;
-    z-index: 2;
+    z-index: 1;
     border: none;
     width: 3rem;
     height: 3rem;
@@ -227,7 +227,8 @@ form button {
     bottom: 0;
     height: 100%;
     width: 100vw;
-    overflow-y: scroll !important;
+    overflow-y: hidden;
+    overflow-x: scroll !important;
     transition: all 0.5s ease 0s;
     transform: translate3d(0%, 0px, 0px);
 }
