--- a/public/style.css
+++ b/public/style.css
@@ -227,8 +227,8 @@ form button {
     bottom: 0;
     height: 100%;
     width: 100vw;
-    overflow-y: hidden;
-    overflow-x: scroll !important;
+    overflow-x: hidden;
+    overflow-y: scroll !important;
     transition: all 0.5s ease 0s;
     transform: translate3d(0%, 0px, 0px);
 }
