--- a/public/style.css
+++ b/public/style.css
@@ -5,12 +5,12 @@
 }
 
 .page {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
     background-color: #FBF5E5;
     font: 20px Helvetica, Arial;
-    overflow: hidden;
-    width: 100vw;
-    max-width: 100vw;
-    
 }
 .page.login {
     background-color: #E6B5B3;
@@ -135,7 +135,7 @@ form button {
 }
 
 .countdown .countdown-toggler {
-    position: absolute;
+    position: fixed;
     top: 1rem;
     left: 1rem;
     z-index: 1;
@@ -149,7 +149,7 @@ form button {
 
 .countdown .container {
     display: block;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -193,7 +193,7 @@ form button {
 
 .main-nav .container {
     display: block;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
