adding setup profile page

--- a/src/views/mypage.pug
+++ b/src/views/mypage.pug
@@ -5,7 +5,8 @@ block content
     - var title = 'Front-end developer'
     include shared/header.pug
     div(class="main")
-        h2 No requests from your colleagues
+        img(src="/assets/hourglass.png")
+        h2(class="status-title") No requests from your colleagues
 
 block footerScripts    
     script(src="./js/main.js")
