--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -9,6 +9,6 @@ block content
                 input(type="email" name="email" id="email")
             label Password
                 input(type="password" name="password" id="usrpwd")
-            a(href="/mypage") Create
+            a(href="/account-setup") Create
 block footerScripts
     script(src="./js/main.js")
