--- a/public/style.css
+++ b/public/style.css
@@ -60,6 +60,7 @@
     flex: 1;
     align-items: center;
     justify-content: center;
+    padding: 2rem;
 }
 
 img {
@@ -105,11 +106,10 @@ form button {
 }
 
 #loginform {
-    
+    width: 100%;
 }
 #loginform label {
     display: block;
-    position: absolute;
 }
 #loginform input {
     width: 100%;
@@ -135,10 +135,10 @@ form button {
 }
 
 .countdown .countdown-toggler {
-    position: fixed;
+    z-index: 1;
+    position: absolute;
     top: 1rem;
     left: 1rem;
-    z-index: 1;
     border: none;
     width: 3rem;
     height: 3rem;
@@ -148,6 +148,7 @@ form button {
 }
 
 .countdown .container {
+    z-index: 2;
     display: block;
     position: fixed;
     top: 0;
@@ -165,8 +166,11 @@ form button {
 .countdown.open .container {
     transform: translate3d(0%, 0px, 0px);
 }
+.countdown.open .countdown-toggler {
+    z-index: 2;
+}
 
-.countdown.open .container .content {
+.countdown .container .content {
     width: 80%;
     text-align: right;
     line-height: 2.5;
@@ -178,10 +182,10 @@ form button {
 }
 
 .main-nav .nav-toggler {
+    z-index: 1;
     position: absolute;
     top: 1rem;
     right: 1rem;
-    z-index: 1;
     border: none;
     width: 3rem;
     height: 3rem;
@@ -192,6 +196,7 @@ form button {
 }
 
 .main-nav .container {
+    z-index: 2;
     display: block;
     position: fixed;
     top: 0;
@@ -216,7 +221,9 @@ form button {
 .main-nav.open .container {
     transform: translate3d(0%, 0px, 0px);
 }
-
+.main-nav.open .nav-toggler {
+    z-index: 2;
+}
 
 .page-container {
     display: block;
@@ -249,6 +256,18 @@ form button {
     width: inherit;
     height: inherit;
     object-fit: cover;
+}
+
+.profile__name {
+    font-size: 1.25rem;
+    margin-top: 1.188rem;
+}
+.profile__title {
+    font-size: 0.875rem
+}
+
+.status-title {
+    font-size: 0.875rem;
 }
 
 .visually-hidden { 
