--- a/src/views/shared/navigation.pug
+++ b/src/views/shared/navigation.pug
@@ -2,31 +2,25 @@ nav(class="main-nav")
     div(class="container")
         ul(class="nav-list")
             li
-                a(href="/mypage") My page
+                a(href="/department?java") Java
             li
-                a(href="/chat") Chat
+                a(href="/department?msdev") MsDev
             li
-                a(href="/logout") Logout
+                a(href="/department?mssolutions") MsSolutions
             li
-                a(href="#") Java
+                a(href="/department?epi") EPI
             li
-                a(href="#") MsDev
+                a(href="/department?baa") BAA
             li
-                a(href="#") MsSolutions
+                a(href="/department?ux") UX
             li
-                a(href="#") EPI
+                a(href="/department?trondheim") Trondheim
             li
-                a(href="#") BAA
+                a(href="/department?aiadvisory") AI Advisory
             li
-                a(href="#") UX
+                a(href="/department?admin") Admin
             li
-                a(href="#") Trondheim
-            li
-                a(href="#") AI Advisory
-            li
-                a(href="#") Admin
-            li
-                a(href="#") Sales & marketing
+                a(href="/department?salesandmarketing") Sales & marketing
             li
                 a(href="/mypage") My page
             li
