--- a/src/views/shared/header.pug
+++ b/src/views/shared/header.pug
@@ -1,6 +1,6 @@
 header(class="header")
     div
-        picture(class="profile-image-wrapper")
-            img(src="/assets/ralph-wave.gif" alt="Profile image")
+        - var profile = { imageUrl: '/assets/ralph-wave.gif', alt: 'Profile image' }
+        include profile-image.pug
         h1(class="profile__name")= name
         p(class="profile__title")= title
