--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+input[type='text'],
+input[type='number'],
+textarea {
+  font-size: 16px;
+}
+
 .page {
     width: 100%;
     height: 100%;
