--- a/src/views/shared/countdown.pug
+++ b/src/views/shared/countdown.pug
@@ -1,7 +1,9 @@
 nav(class="countdown")
+    span(class="amination-background")
     div(class="container")
         div(class="content")
             p dummytekst
     button(class="countdown-toggler")
         span(class="visually-hidden") Focus
-        img(src="/assets/countdown.png" alt="Countdown clock")
+        img(class="open" src="/assets/countdown.png" alt="Countdown clock")
+        img(class="closed" src="/assets/close.png" alt="close")
