--- a/src/views/shared/navigation.pug
+++ b/src/views/shared/navigation.pug
@@ -29,4 +29,5 @@ nav(class="main-nav")
                 a(href="/logout") Logout
     button(class="nav-toggler")
         span(class="visually-hidden") Open navigation
-        img(src="/assets/nav-list.png" alt="List")
+        img(class="open" src="/assets/nav-list.png" alt="List")
+        img(class="closed" src="/assets/close.png" alt="close")
