split css to smaller components

--- a/public/style.css
+++ b/public/style.css
@@ -1,378 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Coming+Soon&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-input[type='text'],
-input[type='number'],
-textarea {
-  font-size: 16px;
-}
-
-.page {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    background-color: #FBF5E5;
-    font-family: "Times New Roman", Times, serif;
-    /* font-family: 'Coming Soon', cursive; */
-}
-.page.login {
-    background-color: #E6B5B3;
-}
-
-@keyframes fadeOut {
-    0% { opacity: 1; }
-    80% { opacity: 1; }
-    100% { opacity: 0; }
-}
-#splash {
-    z-index: 2;
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #E6B5B3;
-    opacity: 0;
-    animation-duration: 3s;
-    animation-name: fadeOut;
-}
-
-.main-wrapper {
-    display: flex;
-    flex-direction: column;
-    max-width: 500px;
-    min-height: 100vh;
-    margin: auto;
-}
-
-.main-wrapper.open-menu {
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-}
-
-.main-wrapper .header {
-    text-align: center;
-    margin-top: 3em;
-}
-
-.main-wrapper .main {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    align-items: center;
-    justify-content: center;
-    padding: 2rem;
-}
-
-img {
-    max-width: 100%;
-}
-.chat-wrapper {
-    width: 100%;
-}
-form {
-    padding: 3px;
-    bottom: 0;
-}
-form #m {
-    border: 0;
-}
-form button {
-    border: none;
-    padding: 10px;
-    font-size: 1rem;
-}
-#messages {
-    height: 50vw;
-    width: 100%;
-    background-color: white;
-    position: relative;
-    display: block;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow-y: scroll !important;
-}
-#messages li {
-    padding: 5px 10px;
-    display: block;
-}
-#messages li:nth-child(odd) {
-    background: #eee;
-}
-
-.narrow-wrapper {
-    width: 100%;
-    max-width: 20rem;
-}
-
-#loginform {
-    width: 100%;
-}
-#loginform label {
-    display: block;
-}
-#loginform input {
-    width: 100%;
-    height: 30px;
-    margin-bottom: 20px;
-    background-color: transparent;
-    border: none;
-    border-bottom: solid 2px #2D2D2D;
-}
-#loginform button {
-    border: none;
-    padding: 10px;
-    font-size: 1rem;
-}
-
-.forgot-password {
-    display: block;
-}
-.new-user {
-    display: block;
-    text-align: center;
-    margin-top: 4em;
-}
-
-.countdown {
-    position: fixed;
-    z-index: 1;
-}
-
-.countdown .countdown-toggler {
-    z-index: 1;
-    position: absolute;
-    top: 1rem;
-    left: 1rem;
-    border: none;
-    width: 3rem;
-    height: 3rem;
-    overflow: hidden;
-    color: transparent;
-    background-color: transparent;
-}
-.countdown .countdown-toggler .open {
-    display: block;
-}
-.countdown.open .countdown-toggler .open {
-    display: none;
-}
-.countdown .countdown-toggler .closed {
-    display: none;
-}
-.countdown.open .countdown-toggler .closed {
-    display: block;
-}
-
-.countdown .amination-background {
-    display: block;
-    position: fixed;
-    background-color: #DA6343;
-    top: 2.2rem;
-    left: 2.2rem;
-    border: none;
-    width: 0rem;
-    height: 0rem;
-    border-radius: 50%;
-    transition: all 0.5s ease 0s;
-}
-.countdown .container {
-    z-index: 2;
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 100%;
-    width: 100vw;
-    display: none;
-    /* border-radius: 50%; */
-    overflow-y: scroll !important;
-    /* background-color: #DA6343; */
-    background-color: transparent;
-    transition: all 0.5s ease 0s;
-    /* transform: translate3d(0%, 0px, 0px); */
-}
-
-.countdown.open .amination-background {
-    width: 300vh;
-    height: 300vh;
-    top: -100vh;
-    left: -100vh;
-}
-
-.countdown.open .container {
-    /* height: 100%;
-    width: 100vw; */
-    /* border-radius: 0%; */
-    display: block;
-    transform: translate3d(0%, 0px, 0px);
-}
-.countdown.open .countdown-toggler {
-    z-index: 2;
-}
-
-.countdown .container .content {
-    width: 80%;
-    text-align: right;
-    line-height: 2.5;
-    margin-top: 8rem;
-}
-
-.countdown.open ~ .page-container {
-    /* transform: translate3d(100%, 0px, 0px); */
-}
-
-.main-nav .nav-toggler {
-    z-index: 1;
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    border: none;
-    width: 3rem;
-    height: 3rem;
-    overflow: hidden;
-    color: transparent;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.main-nav .container {
-    z-index: 2;
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 100%;
-    width: 100vw;
-    overflow-y: scroll !important;
-    background-color: rgba(233, 220, 211, .7);
-    transition: all 0.5s ease 0s;
-    transform: translate3d(100%, 0px, 0px);
-}
-
-.main-nav .container .nav-list {
-    width: 80%;
-    text-align: right;
-    line-height: 2.5;
-    margin-top: 8rem;
-}
-.main-nav .container .nav-list a {
-    color: black;
-    text-decoration: none;
-}
-.main-nav .container .nav-list a:hover {
-    text-decoration: underline;
-}
-
-.main-nav.open .container {
-    transform: translate3d(0%, 0px, 0px);
-}
-.main-nav.open .nav-toggler {
-    z-index: 2;
-}
-
-.main-nav .nav-toggler .open {
-    display: block;
-}
-.main-nav.open .nav-toggler .open {
-    display: none;
-}
-.main-nav .nav-toggler .closed {
-    display: none;
-}
-.main-nav.open .nav-toggler .closed {
-    display: block;
-}
-
-.page-container {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 100%;
-    width: 100vw;
-    overflow-x: hidden;
-    overflow-y: scroll !important;
-    transition: all 0.5s ease 0s;
-    transform: translate3d(0%, 0px, 0px);
-}
-
-.main-nav.open ~ .page-container {
-    /* Add the blur effect */
-    filter: blur(8px);
-    -webkit-filter: blur(8px);
-    /* transform: translate3d(-100%, 0px, 0px); */
-}
-
-.profile-image-wrapper {
-    width: 8rem;
-    height: 8rem;
-    display: block;
-    margin: auto;
-    border-radius: 50%;
-    overflow: hidden;
-}
-.profile-image-wrapper img {
-    width: inherit;
-    height: inherit;
-    object-fit: cover;
-}
-
-.profile__name {
-    font-size: 1.25rem;
-    margin-top: 1.188rem;
-}
-.profile__title {
-    font-size: 0.875rem
-}
-
-.status-title {
-    font-size: 0.875rem;
-}
-
-.department-employees {
-    list-style: none;
-    width: 80%;
-    line-height: 2.5;
-    margin-top: 8rem;
-}
-.department-employees a {
-    color: black;
-}
-.department-employees .name {
-    display: block;
-    border-bottom: solid 1px;
-}
-.department-employees .department {
-    display: block;
-    font-size: .88rem;
-    margin-bottom: 2rem;
-}
-.goto-employee-arrow {
-    float: right;
-}
-
-.visually-hidden { 
-    position: absolute !important;
-    height: 1px; 
-    width: 1px;
-    overflow: hidden;
-    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-    clip: rect(1px, 1px, 1px, 1px);
-    white-space: nowrap; /* added line */
-}
+@import 'css/general.css';
+@import 'css/chat.css';
+@import 'css/login.css';
+@import 'css/countdown.css';
+@import 'css/navigation.css';
+@import 'css/profile.css';
+@import 'css/department.css';
+@import 'css/utils.css';
