--- a/src/views/shared/layout/root.pug
+++ b/src/views/shared/layout/root.pug
@@ -5,8 +5,9 @@ head
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible" content="ie=edge")
     title #{pageTitle} / Flo
-    link(rel="stylesheet" type="text/css" href="style.css" media="all")
+    link(rel="stylesheet" type="text/css" href="/style.css" media="all")
     link(rel="manifest" href="manifest.json")
+    include ../favicon.pug
     block headScripts
 
 body(class=`page${layoutType ? ' ' +layoutType : ''}`)
