--- a/src/views/initial-setup.pug
+++ b/src/views/initial-setup.pug
@@ -12,6 +12,8 @@ block content
                 - var profile = { id: 'imgOut', imageUrl: '/assets/ralph-wave.gif', alt: 'Profile image' }
                 include shared/profile-image.pug
                 input(type="file" accept="image/*" id="imgInp" class="visually-hidden")
+            label Department
+                input(type="text" name="department" id="department")
             button(type="submit") Done
 block footerScripts
     script(src="./js/main.js")
@@ -20,8 +22,9 @@ block footerScripts
         const socket = io();
         const form = document.getElementById('loginform');
         const name = document.getElementById('name');
-        const fileIn = document.getElementById('imgInp'),
-            fileOut = document.getElementById('imgOut');
+        const department = document.getElementById('department');
+        const fileIn = document.getElementById('imgInp');
+        const fileOut = document.getElementById('imgOut');
 
         const readUrl = event => {
             if(event.files && event.files[0]) {
@@ -31,30 +34,31 @@ block footerScripts
             }
         }
 
-        fileIn.onchange = function() {
-        readUrl(this);
+        fileIn.onchange = () => {
+            readUrl(this);
         };
 
-        const setAccountData = event => {
-            event.preventDefault();
-            console.log('trying to chat');
-            socket.emit('set account data', {
-              text: messageInput.value,
-              color: favcolorInput.value
-            });
-            messageInput.value = "";
-            return false;
-        };
+        const getCookie = name => {
+            const nameEQ = name + "=";
+            const ca = document.cookie.split(';');
+            for(let i=0;i < ca.length;i++) {
+                const c = ca[i];
+                while (c.charAt(0)==' ') c = c.substring(1,c.length);
+                if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
+            }
+            return null;
+        }
+
         const setup = event => {
             event.preventDefault();
             console.log('trying to chat');
             socket.emit('setup', {
-              name: name.value,
-              profileImg: document.getElementById('imgOut').value
+                uid: getCookie('gf_uid'),
+                name: name.value,
+                profileImg: fileOut.value,
+                department: department.value
             });
             return false;
         };
         form.addEventListener('submit', setup);
-        socket.on('redirect', function(destination) {
-            window.location.href = destination;
-        });
+        
