--- a/src/views/employee.pug
+++ b/src/views/employee.pug
@@ -10,3 +10,8 @@ block content
 
 block footerScripts    
     script(src="./js/main.js")
+    script(src="/socket.io/socket.io.js")
+    script.
+        const socket = io();
+        socket.emit('userShouldBeLoggedInHere',{});
+        socket.on('redirect', destination => window.location.href = destination);
