--- a/src/views/shared/navigation.pug
+++ b/src/views/shared/navigation.pug
@@ -2,25 +2,25 @@ nav(class="main-nav")
     div(class="container")
         ul(class="nav-list")
             li
-                a(href="/department?java") Java
+                a(href="/department/java") Java
             li
-                a(href="/department?msdev") MsDev
+                a(href="/department/msdev") MsDev
             li
-                a(href="/department?mssolutions") MsSolutions
+                a(href="/department/mssolutions") MsSolutions
             li
-                a(href="/department?epi") EPI
+                a(href="/department/epi") EPI
             li
-                a(href="/department?baa") BAA
+                a(href="/department/baa") BAA
             li
-                a(href="/department?ux") UX
+                a(href="/department/ux") UX
             li
-                a(href="/department?trondheim") Trondheim
+                a(href="/department/trondheim") Trondheim
             li
-                a(href="/department?aiadvisory") AI Advisory
+                a(href="/department/aiadvisory") AI Advisory
             li
-                a(href="/department?admin") Admin
+                a(href="/department/admin") Admin
             li
-                a(href="/department?salesandmarketing") Sales & marketing
+                a(href="/department/salesandmarketing") Sales & marketing
             li
                 a(href="/mypage") My page
             li
