--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,26 +3,84 @@
 }
 #loginform label {
     display: block;
+    text-transform: lowercase;
 }
 #loginform input {
     width: 100%;
-    height: 30px;
+    height: 2rem;
     margin-bottom: 20px;
     background-color: transparent;
     border: none;
     border-bottom: solid 2px #2D2D2D;
 }
+.input-wrapper {
+    position: relative;
+    height: 4rem;
+    margin-bottom: 1rem;
+}
+.input-wrapper input {
+    position: absolute;
+    bottom: 0rem;
+}
+.input-wrapper label {
+    /* bottom: 2rem; */
+    bottom: 3.5rem;
+    left: .2rem;
+    position: absolute;
+    transition: bottom 0.5s ease;
+}
+/* .input-wrapper input:focus ~ label,
+.input-wrapper input:not(:empty) ~ label {
+    
+} */
+
 #loginform button {
     border: none;
     padding: 10px;
     font-size: 1rem;
+    background-color: transparent;
+    display: block;
+    margin: auto;
+    margin-top: 4rem;
+    cursor: pointer;
+    border-radius: 50%;
+    border: transparent dotted 3px;
+    transition: border 0.5s ease;
+}
+#loginform button:hover,
+#loginform button:active,
+#loginform button:focus {
+    border-color: black;
+}
+#loginform button:focus {
+    border-color: black;
+    border-style: solid;
+}
+
+.forgot-password,
+.new-user {
+    display: block;
+    text-decoration: none;
+    color: black;
+    font-weight: 200;
+    margin-top: .5em;
+}
+.forgot-password:hover,
+.forgot-password:active,
+.forgot-password:focus,
+.new-user:hover,
+.new-user:active,
+.new-user:focus {
+    text-decoration: underline;
 }
 
 .forgot-password {
-    display: block;
+    font-style: italic;
 }
+
 .new-user {
-    display: block;
     text-align: center;
-    margin-top: 4em;
+    margin: 4em auto;
+    display: table;
+    
 }
