--- a/public/css/navigation.css
+++ b/public/css/navigation.css
@@ -1,8 +1,8 @@
 .main-nav .nav-toggler {
     z-index: 1;
     position: absolute;
-    top: 1rem;
-    right: 1rem;
+    top: 2rem;
+    right: 3rem;
     border: none;
     width: 3rem;
     height: 3rem;
@@ -29,11 +29,24 @@
 }
 
 .main-nav .container .nav-list {
-    width: 80%;
+    padding-right: 7rem;
+    padding-left: 3rem;
     text-align: right;
-    line-height: 2.5;
-    margin-top: 8rem;
+    line-height: 3.5;
+    margin-top: 7rem;
+    font-weight: 600;
+    font-size: 1.4em;
+    margin-bottom: 5em;
+    list-style: none;
 }
+
+.main-nav .container .nav-list li {
+    border-bottom: solid 1px;
+}
+.nav-list li:nth-child(-n+6) {
+    border-bottom: none;   
+}
+
 .main-nav .container .nav-list a {
     color: black;
     text-decoration: none;
