--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -29,5 +29,5 @@ block footerScripts
             return false;
         };
         form.addEventListener('submit', register);
-        socket.on('set_uid', data => document.cookie = data);
+        //- socket.on('set_uid', data => document.cookie = data);
         socket.on('redirect', destination => window.location.href = destination);
