--- a/src/views/initial-setup.pug
+++ b/src/views/initial-setup.pug
@@ -14,6 +14,8 @@ block content
                 input(type="file" accept="image/*" id="imgInp" class="visually-hidden")
             label Department
                 input(type="text" name="department" id="department")
+            label Jobtitle
+                input(type="text" name="jobtitle" id="jobtitle")
             button(type="submit") Done
 block footerScripts
     script(src="./js/main.js")
@@ -23,6 +25,7 @@ block footerScripts
         const form = document.getElementById('loginform');
         const name = document.getElementById('name');
         const department = document.getElementById('department');
+        const jobtitle = document.getElementById('jobtitle');
         const fileIn = document.getElementById('imgInp');
         const fileOut = document.getElementById('imgOut');
 
@@ -53,9 +56,10 @@ block footerScripts
             event.preventDefault();
             console.log('trying to chat');
             socket.emit('setup', {
-                name: name.value,
+                username: name.value,
                 profileImg: fileOut.value,
-                department: department.value
+                department: department.value,
+                jobtitle: jobtitle.value
             });
             return false;
         };
